--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box
 }
 
-:after,
+ :after,
  :before {
     --tw-content: ""
 }
@@ -114,11 +114,11 @@ button {
     background-image: none
 }
 
-:-moz-focusring {
+ :-moz-focusring {
     outline: auto
 }
 
-:-moz-ui-invalid {
+ :-moz-ui-invalid {
     box-shadow: none
 }
 
@@ -126,7 +126,7 @@ progress {
     vertical-align: baseline
 }
 
-::-webkit-inner-spin-button,
+ ::-webkit-inner-spin-button,
  ::-webkit-outer-spin-button {
     height: auto
 }
@@ -136,11 +136,11 @@ progress {
     outline-offset: -2px
 }
 
-::-webkit-search-decoration {
+ ::-webkit-search-decoration {
     -webkit-appearance: none
 }
 
-::-webkit-file-upload-button {
+ ::-webkit-file-upload-button {
     -webkit-appearance: button;
     font: inherit
 }
@@ -209,7 +209,7 @@ button {
     cursor: pointer
 }
 
-:disabled {
+ :disabled {
     cursor: default
 }
 
@@ -452,6 +452,9 @@ html {
     cursor: pointer;
     --tw-border-opacity: 1;
     border-color: rgb(55 65 81/var(--tw-border-opacity));
-    border-width: 2px;
     position: relative;
+}
+
+.soundButton:hover {
+    border-width: 2px;
 }
